--- a/index.html
+++ b/index.html
@@ -5,28 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dolar para Real</title>
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
     <header>
-        <img src="assets/logo.png" alt="Conversor" />
+        <img src="assets/logo.png" alt="Conversor">
     </header>
 
     <main>
         <section>
             <span class="cur">US$</span>
-            <input id="usd" type="text" />
+            <input id="usd" type="text">
         </section>
         <section>
             <span class="cur">R$</span>
-            <input id="brl" type="text" />
+            <input id="brl" type="text">
         </section>
     </main>
 
     <footer>
-        Feito pela B7Web
+        <p>&copy; kelverlySantos</p>
     </footer>
+
+
+
+
+
+    <script src="assets/main.js"></script>
 </body>
+
+
+
 
 </html>
